--- a/index.html
+++ b/index.html
@@ -10,36 +10,26 @@
 		  content="width=1024">
 	<title>Dashboard V2 (connected to source)</title>
 	<link href="css/style.css" rel="stylesheet">
-	<link href="webdatarocks/webdatarocks.min.css" rel="stylesheet"/>  <!--scripts de web data rocks en local-->
-	<script src="webdatarocks/webdatarocks.toolbar.min.js"></script>
-	<script src="webdatarocks/webdatarocks.js"></script>
-	<script src="chartjs/dist/chart.js"></script> <!--scripts de chart.js en local-->
+	<link href="https://cdn.webdatarocks.com/latest/webdatarocks.min.css" rel="stylesheet"/>
+	<script src="https://cdn.webdatarocks.com/latest/webdatarocks.toolbar.min.js"></script>
+	<script src="https://cdn.webdatarocks.com/latest/webdatarocks.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	<script src="chartjs-gauge/dist/chartjs-gauge.js"></script> <!--scripts modifié de l'extension gauge de chart.js en local-->
 	<script src="https://www.gstatic.com/charts/loader.js"></script> <!--scripts google chart en ligne-->
 	<script src="https://cdn.webdatarocks.com/latest/webdatarocks.googlecharts.js"></script> <!--scripts google chart en ligne-->
-
-
 </head>
 
 <body>
 
- 	<section class="my-4 section-half-rounded position-relative">
-			<div class="jumbotron section-inner left-0 rounded-right bg-primary overflow-hidden col-lg-11 position-absolute h-90">
-				<img src="img/tech.jpg" alt="Image" class="img-as-bg">
-			</div>
-
-			<div class="container text-center text-lg-left py-8">
-				<div class="row">
-					<div class="col-lg-6 ml-auto">
-						<div class="card shadow-lg rounded-lg mb-6">
-							<div class="px-5 py-3">
-								<h5 class="h1 mb-2">Dashboard V2 Connected graphs</h5>
-								<p class="lead text-primary mb-0"></p>
-							</div>
-						</div>
+ 	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col">
+					<div class="card">
 					</div>
 				</div>
 			</div>
+		</div>
 	</section>
 
 	<section>
