--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 				<div class="col">
 					<div class="card">
 						<div class="card-body">
-							<table>
-								<td width="350"><div align="center" ><button type="button" onclick="alert('Sorry, fake link (still working on it)')">Switch datasource for scenario 1</button></div></td>
-								<td width="350"><div align="center" ><button type="button" onclick="alert('Sorry, fake link (still working on it)')">Switch datasource for scenario 2</button></div></td>
-								<td width="350"><div align="center" ><button type="button" onclick="alert('Sorry, fake link (still working on it)')">Switch datasource for scenario 3</button></div></td>
+							<table class=table-responsive>
+								<td width="200"><div align="center" ><button type="button" onclick="alert('Sorry, fake link (still working on it)')">Switch datasource for scenario 1</button></div></td>
+								<td width="200"><div align="center" ><button type="button" onclick="alert('Sorry, fake link (still working on it)')">Switch datasource for scenario 2</button></div></td>
+								<td width="200"><div align="center" ><button type="button" onclick="alert('Sorry, fake link (still working on it)')">Switch datasource for scenario 3</button></div></td>
 							</table>
 						</div>
 					</div>
@@ -87,19 +87,19 @@
 					<div class="card">
 						<div class="card-body">
 							<h6 class="mt-3">Pedestrians - Top origins/destinations - MIORIGINCENTROIDPEDESTRIAN & MIDESTINATIONCENTROIDPEDESTRIAN</h6>
-							<table class="table-responsible">
+							<table class=table-responsive>
 									<tr>
 									<td>
 											<div id="pivot7" style="display:none;"></div>  <!--le pivot-->
 									</td>
 									<td>
-											<div><canvas id="chartcontainer7" width= "500px" height="500"></canvas></div> <!--le chart-->
+											<div><canvas id="chartcontainer7" width= "300px" height="500"></canvas></div> <!--le chart-->
 									</td>
 									<td>
 											<div id="pivot1" style="display:none;"></div>  <!--le pivot-->
 									</td>
 									<td>
-											<div><canvas id="chartcontainer1" width= "500px" height="500"></canvas></div> <!--le chart-->
+											<div><canvas id="chartcontainer1" width= "300px" height="500"></canvas></div> <!--le chart-->
 									</td>
 									</tr>
 								</table>
@@ -117,13 +117,13 @@
 					<div class="card">
 						<div class="card-body">
 							<h6 class="mt-3">Pedestrians - Waves of arrival - MIDESTINATIONCENTROIDPEDESTRIAN</h6>
-							<table>
+							<table class=table-responsive>
 										<tr>
 										<td>
 												<div id="pivot9"></div>  <!--le pivot-->
 										</td>
 										<td>
-												<div><canvas id="chartcontainer9" width= "1000" height="500" style="display:none;"></canvas></div> <!--le chart-->
+												<div><canvas id="chartcontainer9" width= "600" height="500" style="display:none;"></canvas></div> <!--le chart-->
 										</td>
 										</tr>
 									</table>
@@ -147,7 +147,7 @@
 												<div id="pivot2" style="display:none;"></div> <!--masque le pivot pour ne garder que le chart/"style=display:none;-->  <!--le pivot-->
 											</td>
 											<td>
-												<div><canvas id="chartcontainer2" width= "1000" height="500"></canvas></div> <!--le chart-->
+												<div><canvas id="chartcontainer2" width= "600" height="500"></canvas></div> <!--le chart-->
 											</td>
 											</tr>
 										</table>
@@ -171,7 +171,7 @@
 											<div id="pivot3" style="display:none;"></div>  <!--le pivot-->
 									</td>
 									<td>
-											<div><canvas id="chartcontainer3" width= "1000px" height="500"></canvas></div> <!--le chart-->
+											<div><canvas id="chartcontainer3" width= "600" height="500"></canvas></div> <!--le chart-->
 									</td>
 									</tr>
 								</table>
@@ -195,7 +195,7 @@
 											<div id="pivot4" style="display:none;"></div>  <!--le pivot-->
 									</td>
 									<td>
-											<div><canvas id="chartcontainer4" width= "1000px" height="500"></canvas></div> <!--le chart-->
+											<div><canvas id="chartcontainer4" width= "600" height="500"></canvas></div> <!--le chart-->
 									</td>
 									</tr>
 								</table>
@@ -215,7 +215,6 @@
 							<h6 class="mt-3">Pollutants types distribution - MISYSPO</h6>
 							<table class=table-responsive> <!--colonne de gauche : pivot / colonne de droite : chart-->
 								<tr>
-								<td><p style="color:#FFFFFF";>XXXXXXXXXXXXXXXXXXXX</p></td>
 								<td>
 										<div id="pivot10" style="display:none;"></div>  <!--le pivot-->
 								</td>
@@ -244,7 +243,7 @@
 										<div id="pivot6" style="display:none;"></div>  <!--le pivot-->
 								</td>
 								<td>
-										<div><canvas id="chartcontainer6" width= "1000px" height="500"></canvas></div> <!--le chart-->
+										<div><canvas id="chartcontainer6" width= "600" height="500"></canvas></div> <!--le chart-->
 								</td>
 								</tr>
 							</table>
@@ -268,13 +267,13 @@
 										<div id="pivot11" style="display:none;"></div>  <!--le pivot-->
 								</td>
 								<td>
-										<div><canvas id="chartcontainer11" width= "500"></canvas></div> <!--le chart-->
+										<div><canvas id="chartcontainer11" width= "300"></canvas></div> <!--le chart-->
 								</td>
 								<td>
 										<div id="pivot12" style="display:none;"></div>  <!--le pivot-->
 								</td>
 								<td>
-										<div><canvas id="chartcontainer12" width= "500"></canvas></div> <!--le chart-->
+										<div><canvas id="chartcontainer12" width= "300"></canvas></div> <!--le chart-->
 								</td>
 								</tr>
 							</table>
@@ -298,7 +297,7 @@
 										<div id="pivot13" style="display:none;"></div>  <!--le pivot-->
 								</td>
 								<td>
-										<div><canvas id="chartcontainer13" width= "1000" height="450"></canvas></div> <!--le chart-->
+										<div><canvas id="chartcontainer13" width= "600" height="450"></canvas></div> <!--le chart-->
 								</td>
 								</tr>
 							</table>
@@ -322,7 +321,7 @@
 											<div id="pivot5" style="display:none;"></div>  <!--le pivot-->
 									</td>
 									<td>
-											<div id="googlechart-container5" style="width:1000px;height:550px;"></div> <!--le chart-->
+											<div id="googlechart-container5" style="width:600px;height:550px;"></div> <!--le chart-->
 									</td>
 									</tr>
 								</table>
@@ -340,10 +339,12 @@
 					<div class="card">
 						<div class="card-body">
 							<h6 class="mt-3">Schedules and route visualization - GTFS - TOHTML</h6>
-							<iframe width="1050" height="500" src="https://zw6072.github.io/depot_data/gtfs-to-html/index.html"></iframe> <!--version locale-->
-							<!--attention : L'index et les plaquettes horaires doivent être placées dans le même dossier.
-							La logique des liens diffère entre la version locale et la version en ligne.
-							Le path du CSS et du JS doivent être configurées dans le ?? (ou directement dans la page html de la plaquette horaire)-->
+							<table class=table-responsive>
+								<tr><td><iframe width="800" height="500" src="https://zw6072.github.io/depot_data/gtfs-to-html/index.html"></iframe></td></tr>
+								<!--attention : L'index et les plaquettes horaires doivent être placées dans le même dossier.
+								La logique des liens diffère entre la version locale et la version en ligne.
+								Le path du CSS et du JS doivent être configurées dans le ?? (ou directement dans la page html de la plaquette horaire)-->
+							</table>
 						</div>
 					</div>
 				</div>
@@ -358,15 +359,15 @@
 					<div class="card">
 						<div class="card-body">
 							<h6 class="mt-3">Graphical schedules - TOCHART</h6>
-							<table >
+							<table class=table-responsive>
 								<tr>
 								<td valign="top">
-									<iframe width= "400" height="1600" src="https://zw6072.github.io/depot_data/gtfs-to-charts"></iframe> <!--version en ligne-->
+									<iframe width= "250" height="1600" src="https://zw6072.github.io/depot_data/gtfs-to-charts"></iframe>
 									<!--attention : la logique des liens nécessite que l'index des graphes soit placé à la racine (avec l'index de la page html du site) aux côtés d'un dossier "charts" contenant les graphes, le css et le js.
 									Le path est potentiellement configurable dans gtfs-to-chart/lib/gtfs-to-chart-->
 								</td>
 								<td>
-									<iframe width= "650" height="2000" src="https://zw6072.github.io/depot_data/gtfs-to-charts/charts" name="iframeA" alt="Please select a route"></iframe>
+									<iframe width= "350" height="2000" src="https://zw6072.github.io/depot_data/gtfs-to-charts/charts" name="iframeA" alt="Please select a route"></iframe>
 									<!--attention : pour le bon fonctionnement du frame (à gauche l'index_charts, qui ouvre les graphe à droite) il faut ajouter dans chaque lien de l'index_charts la mention "target="iframeA".
 									Cela doit pouvoir se faire en modifiant le code source du projet-->
 								</td>
