--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 
  	<section>
-		<div class="container">
+		<div class="container-lg">
 			<div class="row">
 				<div class="col">
 					<div class="card">
@@ -33,7 +33,7 @@
 	</section>
 
 	<section>
-		<div class="container">
+		<div class="container-lg-lg">
 			<div class="row">
 				<div class="col">
 					<div class="card">
@@ -51,7 +51,7 @@
 	</section>
 
 	<section>
-		<div class="container">
+		<div class="container-lg">
 			<div class="row">
 				<div class="col">
 					<div class="card">
@@ -81,7 +81,7 @@
 	</section>
 
 	<section>
-		<div class="container">
+		<div class="container-lg">
 			<div class="row">
 				<div class="col">
 					<div class="card">
@@ -93,13 +93,13 @@
 											<div id="pivot7" style="display:none;"></div>  <!--le pivot-->
 									</td>
 									<td>
-											<div><canvas id="chartcontainer7" width= "300px" height="500"></canvas></div> <!--le chart-->
+											<div><canvas id="chartcontainer-lg7" width= "300px" height="500"></canvas></div> <!--le chart-->
 									</td>
 									<td>
 											<div id="pivot1" style="display:none;"></div>  <!--le pivot-->
 									</td>
 									<td>
-											<div><canvas id="chartcontainer1" width= "300px" height="500"></canvas></div> <!--le chart-->
+											<div><canvas id="chartcontainer-lg1" width= "300px" height="500"></canvas></div> <!--le chart-->
 									</td>
 									</tr>
 								</table>
@@ -111,7 +111,7 @@
 	</section>
 
 	<section>
-		<div class="container">
+		<div class="container-lg">
 			<div class="row">
 				<div class="col">
 					<div class="card">
@@ -123,7 +123,7 @@
 												<div id="pivot9"></div>  <!--le pivot-->
 										</td>
 										<td>
-												<div><canvas id="chartcontainer9" width= "600" height="500" style="display:none;"></canvas></div> <!--le chart-->
+												<div><canvas id="chartcontainer-lg9" width= "600" height="500" style="display:none;"></canvas></div> <!--le chart-->
 										</td>
 										</tr>
 									</table>
@@ -135,7 +135,7 @@
 	</section>
 
 	<section>
-		<div class="container">
+		<div class="container-lg">
 			<div class="row">
 				<div class="col">
 					<div class="card">
@@ -147,7 +147,7 @@
 												<div id="pivot2" style="display:none;"></div> <!--masque le pivot pour ne garder que le chart/"style=display:none;-->  <!--le pivot-->
 											</td>
 											<td>
-												<div><canvas id="chartcontainer2" width= "600" height="500"></canvas></div> <!--le chart-->
+												<div><canvas id="chartcontainer-lg2" width= "600" height="500"></canvas></div> <!--le chart-->
 											</td>
 											</tr>
 										</table>
@@ -159,7 +159,7 @@
 	</section>
 
 	<section>
-		<div class="container">
+		<div class="container-lg">
 			<div class="row">
 				<div class="col">
 					<div class="card">
@@ -171,7 +171,7 @@
 											<div id="pivot3" style="display:none;"></div>  <!--le pivot-->
 									</td>
 									<td>
-											<div><canvas id="chartcontainer3" width= "600" height="500"></canvas></div> <!--le chart-->
+											<div><canvas id="chartcontainer-lg3" width= "600" height="500"></canvas></div> <!--le chart-->
 									</td>
 									</tr>
 								</table>
@@ -183,7 +183,7 @@
 		</section>
 
 	<section>
-		<div class="container">
+		<div class="container-lg">
 			<div class="row">
 				<div class="col">
 					<div class="card">
@@ -195,7 +195,7 @@
 											<div id="pivot4" style="display:none;"></div>  <!--le pivot-->
 									</td>
 									<td>
-											<div><canvas id="chartcontainer4" width= "600" height="500"></canvas></div> <!--le chart-->
+											<div><canvas id="chartcontainer-lg4" width= "600" height="500"></canvas></div> <!--le chart-->
 									</td>
 									</tr>
 								</table>
@@ -207,7 +207,7 @@
 	</section>
 
 	<section>
-		<div class="container">
+		<div class="container-lg">
 			<div class="row">
 				<div class="col">
 					<div class="card">
@@ -219,7 +219,7 @@
 										<div id="pivot10" style="display:none;"></div>  <!--le pivot-->
 								</td>
 								<td>
-										<div><canvas id="chartcontainer10" width="600"></canvas></div> <!--le chart-->
+										<div><canvas id="chartcontainer-lg10" width="600"></canvas></div> <!--le chart-->
 								</td>
 								</tr>
 							</table>
@@ -231,7 +231,7 @@
 	</section>
 
 	<section>
-		<div class="container">
+		<div class="container-lg">
 			<div class="row">
 				<div class="col">
 					<div class="card">
@@ -243,7 +243,7 @@
 										<div id="pivot6" style="display:none;"></div>  <!--le pivot-->
 								</td>
 								<td>
-										<div><canvas id="chartcontainer6" width= "600" height="500"></canvas></div> <!--le chart-->
+										<div><canvas id="chartcontainer-lg6" width= "600" height="500"></canvas></div> <!--le chart-->
 								</td>
 								</tr>
 							</table>
@@ -255,7 +255,7 @@
 	</section>
 
 	<section>
-		<div class="container">
+		<div class="container-lg">
 			<div class="row">
 				<div class="col">
 					<div class="card">
@@ -267,13 +267,13 @@
 										<div id="pivot11" style="display:none;"></div>  <!--le pivot-->
 								</td>
 								<td>
-										<div><canvas id="chartcontainer11" width= "300"></canvas></div> <!--le chart-->
+										<div><canvas id="chartcontainer-lg11" width= "300"></canvas></div> <!--le chart-->
 								</td>
 								<td>
 										<div id="pivot12" style="display:none;"></div>  <!--le pivot-->
 								</td>
 								<td>
-										<div><canvas id="chartcontainer12" width= "300"></canvas></div> <!--le chart-->
+										<div><canvas id="chartcontainer-lg12" width= "300"></canvas></div> <!--le chart-->
 								</td>
 								</tr>
 							</table>
@@ -285,7 +285,7 @@
 	</section>
 
 	<section>
-		<div class="container">
+		<div class="container-lg">
 			<div class="row">
 				<div class="col">
 					<div class="card">
@@ -297,7 +297,7 @@
 										<div id="pivot13" style="display:none;"></div>  <!--le pivot-->
 								</td>
 								<td>
-										<div><canvas id="chartcontainer13" width= "600" height="450"></canvas></div> <!--le chart-->
+										<div><canvas id="chartcontainer-lg13" width= "600" height="450"></canvas></div> <!--le chart-->
 								</td>
 								</tr>
 							</table>
@@ -309,7 +309,7 @@
 	</section>
 
 	<section>
-		<div class="container">
+		<div class="container-lg">
 			<div class="row">
 				<div class="col">
 					<div class="card">
@@ -321,7 +321,7 @@
 											<div id="pivot5" style="display:none;"></div>  <!--le pivot-->
 									</td>
 									<td>
-											<div id="googlechart-container5" style="width:600px;height:550px;"></div> <!--le chart-->
+											<div id="googlechart-container-lg5" style="width:600px;height:550px;"></div> <!--le chart-->
 									</td>
 									</tr>
 								</table>
@@ -333,7 +333,7 @@
 	</section>
 
 	<section>
-		<div class="container">
+		<div class="container-lg">
 			<div class="row">
 				<div class="col">
 					<div class="card">
@@ -353,7 +353,7 @@
 	</section>
 
 	<section>
-		<div class="container">
+		<div class="container-lg">
 			<div class="row">
 				<div class="col">
 					<div class="card">
@@ -382,7 +382,7 @@
 
 	<footer class="position-relative border-top">
 		<div class="footer pt-3 background-white">
-			<div class="container pt-3">
+			<div class="container-lg pt-3">
 				<div class="row align-items-center justify-content-md-between pb-4">
 					<div class="col-md-6 d-flex align-items-center">
 						<img class="mr-3"
