--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	</section>
 
 	<section>
-		<div class="container-lg-lg">
+		<div class="container-lg">
 			<div class="row">
 				<div class="col">
 					<div class="card">
