--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		</div>
 	</section>
 
-	<section>
+	<section style="display:none;">  <!--attention toute la section est masquée-->
 		<div class="container-lg">
 			<div class="row">
 				<div class="col">
@@ -79,6 +79,32 @@
 			</div>
 		</div>
 	</section>
+
+
+	<section>
+		<div class="container-lg">
+			<div class="row">
+				<div class="col">
+					<div class="card">
+						<div class="card-body">
+							<h6 class="mt-3">Vehicle count - cctv_count_output</h6>
+							<table class=table-responsive>
+									<tr>
+									<td>
+											<div id="pivot14"></div>  <!--le pivot-->
+									</td>
+									<td>
+											<div><canvas id="chartcontainer14" width="820"></canvas></div> <!--le chart-->
+									</td>
+									</tr>
+								</table>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 
 	<section>
 		<div class="container-lg">
@@ -409,7 +435,9 @@
 	<script src="graph/gauge_graph.js"></script>
 	<script src="graph/bus-stop-boarding_graph.js"></script>
 	<script src="graph/bus-stop-alighting_graph.js"></script>
-	<script src="graph/pt-stats_graph.js"></script>
+	<script src="graph/vehicle_count.js"></script>
+	<script src="graph/sankey.js"></script>
+	<script src="graph/sankey.js"></script>
 	<script src="accordion.js"></script>
 </body>
 
