--- a/index.html
+++ b/index.html
@@ -21,15 +21,8 @@
 
 <body>
 
- 	<section>
-		<div class="container-lg">
-			<div class="row">
-				<div class="col">
-					<div class="card">
-					</div>
-				</div>
-			</div>
-		</div>
+	<section>
+		<div style="color:#FFFFFF">x</div>
 	</section>
 
 	<section>
