--- a/index.html
+++ b/index.html
@@ -29,15 +29,7 @@
 		<div class="container-lg">
 			<div class="row">
 				<div class="col">
-					<div class="card">
-						<div class="card-body">
-							<table class=table-responsive>
-								<td><div align="center"><button type="button" onclick="alert('Sorry, fake link (still working on it)')">Switch datasource for scenario 1</button></div></td>
-								<td><div align="center"><button type="button" onclick="alert('Sorry, fake link (still working on it)')">Switch datasource for scenario 2</button></div></td>
-								<td><div align="center"><button type="button" onclick="alert('Sorry, fake link (still working on it)')">Switch datasource for scenario 3</button></div></td>
-							</table>
-						</div>
-					</div>
+					<iframe class="responsive" width="1500" height="120" src="index_frame_arbo.html"></iframe>
 				</div>
 			</div>
 		</div>
@@ -114,6 +106,7 @@
 									<td>
 											<div><canvas class="responsive" id="chartcontainer7" width="1500"></canvas></div> <!--le chart-->
 									</td>
+									<td><div style="color:#FFFFFF">x</div></td>
 									<td>
 											<div id="pivot1" style="display:none;"></div>  <!--le pivot-->
 									</td>
