--- a/index.html
+++ b/index.html
@@ -90,6 +90,77 @@
 		</div>
 	</section>
 
+	<section>
+		<div class="container-lg">
+			<div class="row">
+				<div class="col">
+					<div class="card">
+						<div class="card-body">
+							<h6 class="mt-3">Main KPIs in realtime - RM OPENDATA - could be connected to an API</h6>
+							<table class=table-responsive>
+									<tr>
+									<td>
+											<div id="pivot17"></div>  <!--le pivot-->
+									</td>
+									<td>
+											<div><canvas class="responsive" id="chartcontainer17" width="1500"></canvas></div> <!--le chart-->
+									</td>
+									</tr>
+								</table>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<div class="container-lg">
+			<div class="row">
+				<div class="col">
+					<div class="card">
+						<div class="card-body">
+							<h6 class="mt-3">Speed in realtime - RM OPENDATA - could be connected to an API</h6>
+							<table class=table-responsive>
+									<tr>
+									<td>
+											<div id="pivot15" style="display:none;"></div>  <!--le pivot-->
+									</td>
+									<td>
+											<div><canvas class="responsive" id="chartcontainer15" width="1500"></canvas></div> <!--le chart-->
+									</td>
+									</tr>
+								</table>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section>
+		<div class="container-lg">
+			<div class="row">
+				<div class="col">
+					<div class="card">
+						<div class="card-body">
+							<h6 class="mt-3">Traffic congestion in realtime - RM OPENDATA - could be connected to an API</h6>
+							<table class=table-responsive>
+									<tr>
+									<td>
+											<div id="pivot16" style="display:none;"></div>  <!--le pivot-->
+									</td>
+									<td>
+											<div><canvas class="half-responsive" id="chartcontainer16" width="1500"></canvas></div> <!--le chart-->
+									</td>
+									</tr>
+								</table>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<section>
 		<div class="container-lg">
@@ -422,6 +493,9 @@
 	<script src="graph/bus-stop-alighting_graph.js"></script>
 	<script src="graph/vehicle_count.js"></script>
 	<script src="graph/pt-stats_graph.js"></script>
+	<script src="graph/RT-traffic_resume_graph.js"></script>
+	<script src="graph/RT-traffic_speed_graph.js"></script>
+	<script src="graph/RT-traffic_flow_graph.js"></script>
 	<script src="graph/sankey.js"></script>
 	<script src="graph/sankey.js"></script>
 	<script src="accordion.js"></script>
